@@ -13,11 +13,17 @@
  *)
 type t
 
+    (* test if the set is empty *)
+val is_empty : t -> bool
+
     (* test if an positive integer is in the given set *)
 val mem : int -> t -> bool
 
     (* add the integer to the set (using side effects) *)
 val add : int -> t -> unit
+
+    (* remove the integer to the set (using side effects) *)
+val remove : int -> t -> unit
 
     (* create a fresh empty set *)
 val make : unit -> t
